example/pod/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: standalone-pod
  labels:
    istio-injection: enabled
