example/pod/04-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: standalone-app
  namespace: standalone-pod
spec:
  hosts:
    - standalone-app.example.com
  gateways:
    - istio-system/default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: standalone-app
            port:
              number: 80
          weight: 100
